--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -42,10 +42,10 @@
                     <h3>Pets</h3>
                     <span class="btn-add-pets" onclick="add_pet()">+ Adicionar um Pet</span>
 
-                    <div id="form carro">
-
+                    <div id="form-pet">
+                        
                     </div>
-    
+
 
                 </div>
                 <br>
