novas historias da entrega 4

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,25 +30,25 @@
             <span class="tooltip">Página inicial</span>
           </li>
           <li>
-          <a href="#">
+          <a href="{% url  'clientes'%}">
             <i class='bx bx-user' ></i>
             <span class="links_name">Clientes</span>
           </a>
           <span class="tooltip">Clientes</span>
         </li>
         <li>
-          <a href="#">
+          <a href="{% url  'novo_servico'%}">
             <i class='bx bx-chat' ></i>
-            <span class="links_name">Serviços</span>
+            <span class="links_name">Novo Serviço</span>
           </a>
-          <span class="tooltip">Serviços</span>
+          <span class="tooltip">Novo Serviço</span>
         </li>
         <li>
-          <a href="#">
+          <a href="{% url  'listar_servico'%}">
             <i class='bx bx-folder' ></i>
-            <span class="links_name">Agenda</span>
+            <span class="links_name">Lista de Serviços</span>
           </a>
-          <span class="tooltip">Agenda</span>
+          <span class="tooltip">Lista de Serviços</span>
         </li>
         <li>
           <a href="#">
