--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -64,13 +64,15 @@
             <div id="att_cliente">
                 <p></p>
                 <select id="cliente-select" onchange="dados_cliente()" class="form-control">
+                    <option value=""></option>
                     {%for cliente in clientes%}
-                    <option value="{{cliente.id}}">{{cliente.nome}}</option>
+                        <option value="{{cliente.id}}">{{cliente.nome}}</option>
                     {%endfor%}
                 </select>
                 <br>
                 <hr>
                 <div id="form-att-cliente">
+                    <input type="hidden" id="id">
                     <p>Nome:</p>
                     <input id="nome" type="text" class='form-control'>
                     <p>Sobrenomeome:</p>
@@ -79,8 +81,9 @@
                     <input id="email" type="text" class='form-control'>
                     <p>CPF:</p>
                     <input id="cpf" type="text" class='form-control'>
-
-                    <hr>
+                    <br>
+                    <input onclick="update_cliente()" type="submit" value="salvar" class="btn btn-success">
+                    <hr style="background-color:gray;">
                     <h3>Pets</h3>
 
                     <div id="pets">
